2024-04-18  Karl Berry  <karl@freefriends.org>

	* configure.ac (AC_USE_SYSTEM_EXTENSIONS) [enable_luatex]: call this.
	From the Makefile of busytex, via Luigi mail to karl
	of 12 Apr 2024 06:26:23:
	"For example `gethostbyaddr()` requires `_GNU_SOURCE` or similar".

2024-04-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ac/web2c.ac (eptex), Makefile.am,
	euptexdir/am/euptex.am, eptexdir/*: Remove eptex and eptexdir/.
	* {mftraptest,triptest}.test:
	Filter Web2C year/dev in banner.

2024-03-24  Karl Berry  <karl@freefriends.org>

	* unbalanced-braces.ch: fix from DRF in order to make
	\aftergroup work again with the output routine. Report
	from David Carlisle and Frank Mittelbach, thread starts at:
	https://tug.org/pipermail/tex-live/2024-March/050290.html

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-03-10  Andreas Scherer  <https://ascherer.github.io>

	* help.h: Add new option '-F' for CWEAVE/CTWILL.

2024-02-28  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* eptexdir/unbalanced-braces-eptex.ch: avoid crashing with devious
	uses of \output and \write braces. Slightly modified one for
	eptex and euptex.
	* eptexdir/am/eptex.am (eptex_ch_srcs),
	* euptexdir/am/euptex.am (euptex_ch_srcs) : include
	eptexdir/unbalanced-braces-eptex.ch.
	* ptexdir/am/ptex.am (ptex_ch_srcs),
	* uptexdir/am/uptex.am (uptex_ch_srcs): include unbalanced-braces.ch.

2024-02-26  Karl Berry  <karl@freefriends.org>

	* unbalanced-braces.ch: avoid crashing with devious uses of
	\output and \write braces. From DRF.
	* pdftexdir/am/pdftex.am (pdftex_ch_srcs),
	* xetexdir/am/xetex.am (xetex_ch_srcs): include unbalanced-braces.ch.
	* tests/unbalanced-braces.test: doc file for tests (not runnable).

2024-02-25  Karl Berry  <karl@freefriends.org>

	* locnull-optimize.ch: inner loop optimization (removing one
	unnecessary condition) from DRF.
	* eptexdir/am/eptex.am (eptex_web_srcs),
	* euptexdir/am/euptex.am (euptex_web_srcs),
	* pdftexdir/am/pdftex.am (pdftex_ch_srcs),