@@ -1,5 +1,5 @@
 #!/usr/bin/env perl
-# $Id: tlmgr.pl 70671 2024-03-17 01:10:09Z karl $
+# $Id: tlmgr.pl 71004 2024-04-19 21:17:05Z karl $
 # Copyright 2008-2024 Norbert Preining
 # This file is licensed under the GNU General Public License version 2
 # or any later version.
@@ -8,8 +8,8 @@
 
 use strict; use warnings;
 
-my $svnrev = '$Revision: 70671 $';
-my $datrev = '$Date: 2024-03-17 02:10:09 +0100 (Sun, 17 Mar 2024) $';
+my $svnrev = '$Revision: 71004 $';
+my $datrev = '$Date: 2024-04-19 23:17:05 +0200 (Fri, 19 Apr 2024) $';
 my $tlmgrrevision;
 my $tlmgrversion;
 my $prg;
@@ -5738,6 +5738,7 @@ sub check_runfiles {
   $omit_pkgs .= '^0+texlive|^bin-|^collection-|^scheme-|^texlive-|^texworks';
   $omit_pkgs .= '|^pgf$';           # intentionally duplicated .lua
   $omit_pkgs .= '|^latex-.*-dev$';  # intentionally duplicated base latex
+  $omit_pkgs .= '|^l3(kernel|backend)-dev$';  # more base latex
   my @runtime_files = ();
   #
   foreach my $tlpn ($localtlpdb->list_packages) {
@@ -10553,7 +10554,7 @@ This script and its documentation were written for the TeX Live
 distribution (L<https://tug.org/texlive>) and both are licensed under the
 GNU General Public License Version 2 or later.
 
-$Id: tlmgr.pl 70671 2024-03-17 01:10:09Z karl $
+$Id: tlmgr.pl 71004 2024-04-19 21:17:05Z karl $
 =cut
 
 # test HTML version: pod2html --cachedir=/tmp tlmgr.pl >/tmp/tlmgr.html
